--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %} - FlaskApp</title>
     <style>
-        .post {
-            padding: 10px;
-            margin: 5px;
-            background-color: #f3f3f3
-        }
-
         nav a {
             color: #d64161;
             font-size: 3em;
@@ -17,12 +11,17 @@
             text-decoration: none;
         }
 
-        .alert {
+        .book {
             padding: 20px;
-            margin: 5px;
-            color: #970020;
-            background-color: #ffd5de;
+            margin: 10px;
+            background-color: #f7f4f4;
         }
+
+        .review {
+                margin-left: 50px;
+                font-size: 20px;
+        }
+
     </style>
 </head>
 <body>
@@ -33,10 +32,6 @@
     </nav>
     <hr>
     <div class="content">
-        {% for message in get_flashed_messages() %}
-            <div class="alert">{{ message }}</div>
-        {% endfor %}
-
         {% block content %} {% endblock %}
     </div>
 </body>
